
  target "depend":
     - FIX. Original implementation relied on NetBSD version of
       mkdep(1). So, it didn't work on Linux, FreeBSD and others with
       original BSD mkdep(1). Type of mkdep(1) is detected at
       mk-configure build time. Report by Michael Crogan.

  New variables LN, LN_S, MKDIR, RM, CLEANFILES_CMD, CLEANDIRS_CMD,
  UNINSTALL, MAKEDEPEND, CC_PREFIX, CXX_PREFIX were introduced.

  New variable NODEPS was introduced. With its help one can cut off
  the dependency graph for particular targets.

  New variable BMAKE_REQD was introduced.

  New variable SRCTOP was introduced. With its help
     "mkcmake -C subdir target" may work just like "mkcmake target-subdir".

  New variables CFLAGS.dflt.${CC_TYPE} and CXXFLAGS.dflt.${CXX_TYPE}
    were introduced. They default to -Qunused-arguments
    for clang and clang++.

  mkc.init.mk can be invoked by users directly for setting all
  required variables and further checks (CC_TYPE, LD_TYPE, OPSYS etc.).

  mkc_imp.links.mk:
     - This module was reimplemented from scratch.
       Bug with parallel installation (LINKS and MLINKS) was fixed.

  mkc.minitest.mk:
     - new variable TEST_PREREQS was introduced.

  mkc_imp.inc.mk: fix for ${INCS} installation problem happened when
     headers are built in ${.OBJDIR}. Report by Jan Smydke.

  mkc_imp.info.mk:
     - fix for MKINSTALL=no. "installdirs" unexpectedly created target
       directories.

  mkc.configure.mk:
     - fix issue with MKC_CHECK_CUSTOM when ${.OBJDIR} != ${.CURDIR}
     - MKC_CHECK_PROGS: PROG.<prog> is set even if full path was
       specified.  In addition existence and executability of the
       specified file is always checked.
     - fix for MKC_SOURCE_FUNCLIBS. Not all objects were cleaned
       correctly by target "clean".  Now objects are added to CLEANFILES
       unconditionally.
     - negative results for MKC_REQUIRE_* are not cached.  This gives
       users ability to fix the problem by changing the environment