@@ -106,7 +106,6 @@ test_output :
 	\
 	echo ======= -C dict all ==========; \
 	${MAKE} ${MAKEFLAGS} clean-dict > /dev/null; \
-	echo SRCTOP=$$SRCTOP 1>&2; \
 	env init_make_level=${next_level} ${MAKE} ${MAKEFLAGS} -C dict all > /dev/null; \
 	find ${.OBJDIR} -type f -o -type l | \
 	mkc_test_helper "${PREFIX}" "${.OBJDIR}";\
